tests/diagnostics/comments/doc_comments/trailing/expect.txt
# exit: 1
input/main.coppice:4:1: error: doc comment must document a declaration
  /// Trailing docs are invalid.
  ^
